--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "author": "Neo4j Labs",
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.2",
+    "@babel/types": "^7.26.0",
     "@codemirror/lang-markdown": "^6.1.1",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
@@ -106,9 +107,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.12",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.16.9",
@@ -119,7 +120,7 @@
     "@redux-devtools/extension": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
-    "babel-loader": "^8.2.3",
+    "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "^6.1.1",
     "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^3.6.0",
@@ -140,7 +141,7 @@
     "styled-components": "^5.3.3",
     "typescript": "^4.8.4",
     "webpack": "^5.77.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.3"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
