--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "dom-to-image": "^2.6.0",
     "dompurify": "^3.1.0",
     "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
@@ -87,6 +88,7 @@
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-cluster": "^1.0.4",
+    "react-leaflet-draw": "^0.20.6",
     "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
