--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@codemirror/lang-markdown": "^6.1.1",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
+    "@geoman-io/leaflet-geoman-free": "^2.18.3",
     "@mui/material": "^5.12.3",
     "@mui/styles": "^5.12.3",
     "@mui/x-data-grid": "5.17.26",
@@ -59,6 +60,7 @@
     "@nivo/treemap": "^0.83.0",
     "@sentry/react": "^7.57.0",
     "@sentry/webpack-plugin": "^2.7.1",
+    "@turf/turf": "^7.2.0",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
@@ -88,7 +90,6 @@
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-cluster": "^1.0.4",
-    "react-leaflet-draw": "^0.20.6",
     "react-leaflet-enhanced-marker": "^1.0.21",
     "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "react-markdown": "^8.0.0",
